@@ -1,0 +1,6 @@
+Processing test19...
+
+Warnings...
+
+/usr/local/lib/python2.1/UserDict.py:8 Invalid arguments to (__init__), got 2, expected between 0 and 1
+/usr/local/lib/python2.1/UserDict.py:9 Invalid arguments to (__init__), got 3, expected between 0 and 1
